# openenv-nl-sql

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  val.py
database/: schema.sql  seed_data.sql
graders/: customer_lookup_grader.py  nl_sql_query_grader.py  sales_summary_grader.py
server/: __init__.py  app.py  nl_sql_analytics_env_environment.py
