# Copyright (c) Meta Platforms, Inc. and affiliates.
# Licensed under BSD-style license.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-nl-sql-analytics-env"
version = "0.1.0"
description = "NL SQL Analytics Environment for OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# ✅ REQUIRED — server entry point
[project.scripts]
server = "server.app:main"

# ✅ Package configuration
[tool.setuptools]
include-package-data = true

packages = [
    "server",
    "graders"
]

# Map folders correctly
package-dir = { "" = "." }
